--- a/rollup/tests/RollupRelationshipFieldFinderTests.cls
+++ b/rollup/tests/RollupRelationshipFieldFinderTests.cls
@@ -13,7 +13,7 @@ private class RollupRelationshipFieldFinderTests {
     Set<String> uniqueFieldNames = new Set<String>{ 'Name', 'Id' };
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
-      'Parent.Name',
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Name'),
       uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
@@ -25,7 +25,13 @@ private class RollupRelationshipFieldFinderTests {
 
     // validates that the relationship field finder works even if a fully qualified path isn't provided if the parent
     // is "just" the next level up
-    finder = new RollupRelationshipFieldFinder(control, 'Name', uniqueFieldNames, Account.SObjectType, new Map<Id, SObject>());
+    finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
+      uniqueFieldNames,
+      Account.SObjectType,
+      new Map<Id, SObject>()
+    );
     traversal = finder.getParents(new List<ContactPointAddress>{ cpa });
 
     System.assertEquals(parent, traversal.retrieveParent(cpa.Id));
@@ -41,7 +47,7 @@ private class RollupRelationshipFieldFinderTests {
 
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
-      'Parent.Owner.Name',
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
       new Set<String>{ 'Name', 'Id' },
       User.SObjectType,
       new Map<Id, SObject>()
@@ -66,7 +72,7 @@ private class RollupRelationshipFieldFinderTests {
 
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
-      'Parent.Owner.Name',
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
       new Set<String>{ 'Name', 'Id' },
       User.SObjectType,
       new Map<Id, SObject>()
@@ -103,13 +109,25 @@ private class RollupRelationshipFieldFinderTests {
     Map<Id, SObject> oldCpas = new Map<Id, ContactPointAddress>{ cpa.Id => new ContactPointAddress(Id = cpa.Id, ParentId = intermediateOne.Id) };
 
     Set<String> uniqueFieldNames = new Set<String>{ 'Name', 'Id' };
-    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(control, 'Account.Owner.Name', uniqueFieldNames, User.SObjectType, oldCpas);
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Account.Owner.Name'),
+      uniqueFieldNames,
+      User.SObjectType,
+      oldCpas
+    );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
     System.assertEquals(false, traversal.isUltimatelyReparented(cpa, 'ParentId'), 'Should not report false positive!');
     System.assertEquals(intermediateTwo.Id, traversal.getOldLookupId(cpa, 'ParentId'));
 
-    finder = new RollupRelationshipFieldFinder(control, 'Account.Name', uniqueFieldNames, Account.SObjectType, oldCpas);
+    finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Account.Name'),
+      uniqueFieldNames,
+      Account.SObjectType,
+      oldCpas
+    );
     traversal = finder.getParents(cpas);
 
     System.assertEquals(true, traversal.isUltimatelyReparented(cpa, 'ParentId'), 'Should correctly report reparenting if ultimate lookup is different');
@@ -127,7 +145,13 @@ private class RollupRelationshipFieldFinderTests {
     Map<Id, SObject> oldOpps = new Map<Id, ContactPointAddress>{ cpa.Id => new ContactPointAddress(Id = cpa.Id, ParentId = null) };
 
     Set<String> uniqueFieldNames = new Set<String>{ 'Id', 'Name' };
-    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(control, 'Parent.Owner.Name', uniqueFieldNames, User.SObjectType, oldOpps);
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
+      uniqueFieldNames,
+      User.SObjectType,
+      oldOpps
+    );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
     System.assertEquals(true, traversal.isUltimatelyReparented(cpa, 'ParentId'), 'Should correctly report reparenting if old lookup null');
@@ -136,7 +160,13 @@ private class RollupRelationshipFieldFinderTests {
     cpa.ParentId = null;
     update cpa;
 
-    finder = new RollupRelationshipFieldFinder(control, 'Parent.Owner.Name', uniqueFieldNames, User.SObjectType, oldOpps);
+    finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
+      uniqueFieldNames,
+      User.SObjectType,
+      oldOpps
+    );
     System.assertEquals(true, traversal.isUltimatelyReparented(cpa, 'ParentId'), 'Should correctly report reparenting if new lookup is null');
   }
 
@@ -152,7 +182,13 @@ private class RollupRelationshipFieldFinderTests {
     insert opps;
 
     Map<Id, SObject> oldOpps = new Map<Id, SObject>{ cpaOne.Id => cpaOne, cpaTwo.Id => new ContactPointAddress(ParentId = parentTwo.Id) };
-    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(control, 'Name', new Set<String>{ 'Name', 'Id' }, Account.SObjectType, oldOpps);
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
+      new Set<String>{ 'Name', 'Id' },
+      Account.SObjectType,
+      oldOpps
+    );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(opps);
 
     System.assertEquals(true, traversal.isUltimatelyReparented(cpaTwo, 'ParentId'));
@@ -171,7 +207,7 @@ private class RollupRelationshipFieldFinderTests {
 
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
-      'Name',
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
       new Set<String>{ 'Name', 'Id' },
       Account.SObjectType,
       new Map<Id, SObject>()
@@ -195,17 +231,19 @@ private class RollupRelationshipFieldFinderTests {
 
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
-      'Parent.Name',
+      new Rollup__mdt(
+        GrandparentRelationshipFieldPath__c = 'Parent.Name',
+        CalcItemWhereClause__c = 'Parent.Name != \'\' AND (Parent.Name != \'' +
+          parentOne.Name +
+          '\' OR Parent.AccountNumber = \'' +
+          parentOne.AccountNumber +
+          '\') AND Parent.Name != \'' +
+          parentTwo.Name +
+          '\''
+      ),
       new Set<String>{ 'Name', 'Id' },
       Account.SObjectType,
-      new Map<Id, SObject>(),
-      'Parent.Name != \'\' AND (Parent.Name != \'' +
-      parentOne.Name +
-      '\' OR Parent.AccountNumber = \'' +
-      parentOne.AccountNumber +
-      '\') AND Parent.Name != \'' +
-      parentTwo.Name +
-      '\''
+      new Map<Id, SObject>()
     );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
@@ -213,5 +251,49 @@ private class RollupRelationshipFieldFinderTests {
     Account expectedAcc = new Account(Id = parentOne.Id, Name = parentOne.Name);
     System.assertEquals(expectedAcc, traversal.retrieveParent(cpaOne.Id), 'First opp parent should not be exluded with nested conditional!');
     System.assertEquals(null, traversal.retrieveParent(cpaTwo.Id), 'Second opp should have been excluded with clause after nested conditional!');
+  }
+
+  @isTest
+  static void shouldTraverseAllTheWayUpWhenMetadataFlagIsEnabled() {
+    Account parentOne = new Account(Name = 'ultimate parent');
+    insert parentOne;
+    Account parentTwo = new Account(Name = 'child parent', ParentId = parentOne.Id);
+    // also start another chain of relationships
+    Account secondParent = new Account(Name = 'second child parent', ParentId = parentOne.Id);
+    insert new List<Account>{ parentTwo, secondParent };
+
+    Account grandChild = new Account(Name = 'grandchild', ParentId = secondParent.Id);
+    insert grandChild;
+
+    Account greatGrandchild = new Account(Name = 'great-grandchild', ParentId = grandChild.Id);
+    insert greatGrandchild;
+
+    Account greatGreatGrandchild = new Account(Name = 'great great grandchild', ParentId = greatGrandchild.Id);
+    insert greatGreatGrandchild;
+
+    Account greatGreatGreatGrandchild = new Account(Name = 'great great great!', ParentId = greatGreatGrandchild.Id);
+    insert greatGreatGreatGrandchild;
+
+    ContactPointAddress cpaOne = new ContactPointAddress(ParentId = parentTwo.Id, Name = 'FirstParentedChild');
+    ContactPointAddress cpaTwo = new ContactPointAddress(ParentId = greatGreatGreatGrandchild.Id, Name = 'Second parented child');
+    List<ContactPointAddress> cpas = new List<ContactPointAddress>{ cpaOne, cpaTwo };
+    insert cpas;
+
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(
+        RollupToUltimateParent__c = true,
+        UltimateParentLookup__c = 'ParentId',
+        GrandparentRelationshipFieldPath__c = 'Parent.Name'
+      ),
+      new Set<String>{ 'Name', 'Id' },
+      Account.SObjectType,
+      new Map<Id, SObject>()
+    );
+    RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
+
+    Account expectedAcc = new Account(Id = parentOne.Id, Name = parentOne.Name);
+    System.assertEquals(expectedAcc, traversal.retrieveParent(cpaOne.Id), 'Ultimate parent should have been used!');
+    System.assertEquals(expectedAcc, traversal.retrieveParent(cpaTwo.Id), 'Ultimate parent should be found even if 5+ levels deep in hierarchy');
   }
 }
