--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -424,7 +424,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     String queryString = getQueryString(calcItemType, new List<String>(queryFields), 'Id', '!=');
 
     // eval always null via this route, despite having been used to get the relationship fields
-    return startFullRecalc(matchingMetadata, amountOfCalcItems, queryString, objIds, recordIds, calcItemType, null);
+    return startFullRecalc(matchingMetadata, amountOfCalcItems, queryString, objIds, recordIds, calcItemType, null, RollupInvocationPoint.FROM_LWC);
   }
 
   @AuraEnabled
@@ -456,7 +456,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       operationName,
       wrapper,
       null,
-      potentialConcatDelimiter
+      potentialConcatDelimiter,
+      RollupInvocationPoint.FROM_LWC
     );
   }
 
@@ -538,6 +539,11 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
     @InvocableVariable(label='Grandparent Relationship Field Path' description='Used for grand(or greater)parent rollups')
     global String grandparentRelationshipFieldPath;
+
+    @InvocableVariable(label='Ultimate Parent Field' description='The lookup field in hierarchy rollups')
+    global String ultimateParentLookup;
+    @InvocableVariable(label='Should rollup to ultimate hierarchy parent' description='Used in conjunction with Ultimate Parent Field to drive hierarchical parent rollups')
+    global Boolean rollupToUltimateParent = false;
   }
 
   global class FlowOutput {
@@ -561,85 +567,91 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     List<FlowOutput> flowOutputReturns = new List<FlowOutput>();
     List<Rollup> rollups = new List<Rollup>();
 
-    try {
-      FlowInput firstInput = flowInputs.isEmpty() == false ? flowInputs[0] : new FlowInput();
-      String rollupContext = getFlowRollupContext(firstInput);
+    FlowInput firstInput = flowInputs.isEmpty() == false ? flowInputs[0] : new FlowInput();
+    String rollupContext = getFlowRollupContext(firstInput);
 
-      for (FlowInput flowInput : flowInputs) {
-        FlowOutput flowOutput = new FlowOutput();
-        flowOutputReturns.add(flowOutput);
+    for (FlowInput flowInput : flowInputs) {
+      FlowOutput flowOutput = new FlowOutput();
+      flowOutputReturns.add(flowOutput);
 
-        if (flowInput.recordsToRollup == null || flowInput.recordsToRollup.isEmpty()) {
-          continue;
-        } else {
-          if (flowInput.isRollupStartedFromParent) {
-            QueryWrapper wrapper = getParentWhereClause(
-              flowInput.recordsToRollup,
-              flowInput.lookupFieldOnOpObject,
-              flowInput.rollupSObjectName,
-              flowInput.lookupFieldOnCalcItem,
-              flowInput.grandparentRelationshipFieldPath,
-              flowInput.calcItemWhereClause
-            );
-            performFullRecalculationInner(
-              flowInput.rollupFieldOnCalcItem,
-              flowInput.lookupFieldOnCalcItem,
-              flowInput.lookupFieldOnOpObject,
-              flowInput.rollupFieldOnOpObject,
-              flowInput.rollupSObjectName,
-              flowInput.calcItemTypeWhenRollupStartedFromParent,
-              flowInput.rollupOperation.toUpperCase(),
-              wrapper,
-              flowInput.grandparentRelationshipFieldPath,
-              flowInput.concatDelimiter
-            );
-            continue;
-          }
+      String rollupOperation = flowInput.rollupOperation.toUpperCase();
 
-          SObjectType sObjectType = flowInput.recordsToRollup[0].getSObjectType();
-          Rollup__mdt rollupMeta = new Rollup__mdt(
-            RollupFieldOnCalcItem__c = flowInput.rollupFieldOnCalcItem,
-            LookupObject__c = flowInput.rollupSObjectName,
-            LookupFieldOnCalcItem__c = flowInput.lookupFieldOnCalcItem,
-            LookupFieldOnLookupObject__c = flowInput.lookupFieldOnOpObject,
-            RollupFieldOnLookupObject__c = flowInput.rollupFieldOnOpObject,
-            RollupOperation__c = rollupContext + flowInput.rollupOperation.toUpperCase(),
-            ChangedFieldsOnCalcItem__c = flowInput.calcItemChangedFields,
-            FullRecalculationDefaultNumberValue__c = flowInput.fullRecalculationDefaultNumberValue,
-            FullRecalculationDefaultStringValue__c = flowInput.fullRecalculationDefaultStringValue,
-            CalcItemWhereClause__c = flowInput.calcItemWhereClause,
-            IsFullRecordSet__c = flowInput.isFullRecordSet,
-            OrderByFirstLast__c = flowInput.orderByFirstLast,
-            GrandparentRelationshipFieldPath__c = flowInput.grandparentRelationshipFieldPath,
-            ConcatDelimiter__c = flowInput.concatDelimiter
-          );
-
-          Set<String> uniqueFieldNames = new Set<String>{ 'Id' };
-          if (String.isNotBlank(rollupMeta.LookupFieldOnCalcItem__c)) {
-            uniqueFieldNames.add(rollupMeta.LookupFieldOnCalcItem__c);
-          }
-          if (String.isNotBlank(rollupMeta.RollupFieldOnCalcItem__c)) {
-            uniqueFieldNames.add(rollupMeta.RollupFieldOnCalcItem__c);
-          }
-          Map<Id, SObject> oldFlowRecords = getOldFlowRecords(flowInput.recordsToRollup, sObjectType, new List<String>(uniqueFieldNames));
-          Rollup roll = getRollup(
-            new List<Rollup__mdt>{ rollupMeta },
-            sObjectType,
+      if (flowInput.recordsToRollup == null || flowInput.recordsToRollup.isEmpty()) {
+        continue;
+      } else {
+        if (flowInput.isRollupStartedFromParent) {
+          QueryWrapper wrapper = getParentWhereClause(
             flowInput.recordsToRollup,
-            oldFlowRecords,
-            null,
+            flowInput.lookupFieldOnOpObject,
+            flowInput.rollupSObjectName,
+            flowInput.lookupFieldOnCalcItem,
+            flowInput.grandparentRelationshipFieldPath,
+            flowInput.calcItemWhereClause
+          );
+          performFullRecalculationInner(
+            flowInput.rollupFieldOnCalcItem,
+            flowInput.lookupFieldOnCalcItem,
+            flowInput.lookupFieldOnOpObject,
+            flowInput.rollupFieldOnOpObject,
+            flowInput.rollupSObjectName,
+            flowInput.calcItemTypeWhenRollupStartedFromParent,
+            rollupOperation,
+            wrapper,
+            flowInput.grandparentRelationshipFieldPath,
+            flowInput.concatDelimiter,
             RollupInvocationPoint.FROM_INVOCABLE
           );
-          if (flowInput.deferProcessing) {
-            FLOW_ROLLUPS.add(roll);
-          } else {
-            rollups.add(roll);
-          }
+          continue;
+        } else {
+          // this will throw back up to the Flow engine if the inputs don't pass validation
+          enforceValidationRules(rollupOperation, flowInput);
         }
-        batch(rollups);
+
+        SObjectType sObjectType = flowInput.recordsToRollup[0].getSObjectType();
+        Rollup__mdt rollupMeta = new Rollup__mdt(
+          RollupFieldOnCalcItem__c = flowInput.rollupFieldOnCalcItem,
+          LookupObject__c = flowInput.rollupSObjectName,
+          LookupFieldOnCalcItem__c = flowInput.lookupFieldOnCalcItem,
+          LookupFieldOnLookupObject__c = flowInput.lookupFieldOnOpObject,
+          RollupFieldOnLookupObject__c = flowInput.rollupFieldOnOpObject,
+          RollupOperation__c = rollupContext + rollupOperation,
+          ChangedFieldsOnCalcItem__c = flowInput.calcItemChangedFields,
+          FullRecalculationDefaultNumberValue__c = flowInput.fullRecalculationDefaultNumberValue,
+          FullRecalculationDefaultStringValue__c = flowInput.fullRecalculationDefaultStringValue,
+          CalcItemWhereClause__c = flowInput.calcItemWhereClause,
+          IsFullRecordSet__c = flowInput.isFullRecordSet,
+          OrderByFirstLast__c = flowInput.orderByFirstLast,
+          GrandparentRelationshipFieldPath__c = flowInput.grandparentRelationshipFieldPath,
+          ConcatDelimiter__c = flowInput.concatDelimiter,
+          UltimateParentLookup__c = flowInput.ultimateParentLookup,
+          RollupToUltimateParent__c = flowInput.rollupToUltimateParent
+        );
+
+        Set<String> uniqueFieldNames = new Set<String>{ 'Id' };
+        if (String.isNotBlank(rollupMeta.LookupFieldOnCalcItem__c)) {
+          uniqueFieldNames.add(rollupMeta.LookupFieldOnCalcItem__c);
+        }
+        if (String.isNotBlank(rollupMeta.RollupFieldOnCalcItem__c)) {
+          uniqueFieldNames.add(rollupMeta.RollupFieldOnCalcItem__c);
+        }
+        Map<Id, SObject> oldFlowRecords = getOldFlowRecords(flowInput.recordsToRollup, sObjectType, new List<String>(uniqueFieldNames));
+        Rollup roll = getRollup(
+          new List<Rollup__mdt>{ rollupMeta },
+          sObjectType,
+          flowInput.recordsToRollup,
+          oldFlowRecords,
+          null,
+          RollupInvocationPoint.FROM_INVOCABLE
+        );
+        if (flowInput.deferProcessing) {
+          FLOW_ROLLUPS.add(roll);
+        } else {
+          rollups.add(roll);
+        }
       }
-    } catch (Exception ex) {
-      for (FlowOutput flowOutput : flowOutputReturns) {
+      try {
+        batch(rollups);
+      } catch (Exception ex) {
         flowOutput.IsSuccess = false;
         flowOutput.Message = ex.getMessage() + '\n' + ex.getStackTraceString();
       }
@@ -1419,7 +1431,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
             rollupInfo.RollupOperation__c,
             queryWrapper,
             rollupInfo.GrandparentRelationshipFieldPath__c,
-            rollupInfo.ConcatDelimiter__c
+            rollupInfo.ConcatDelimiter__c,
+            RollupInvocationPoint.FROM_APEX
           );
         }
       }
@@ -1524,6 +1537,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
             LookupFieldOnLookupObject__r.QualifiedApiName,
             RollupFieldOnLookupObject__c,
             RollupFieldOnLookupObject__r.QualifiedApiName,
+            UltimateParentLookup__c,
+            UltimateParentLookup__r.QualifiedApiName,
             // rest of the fields
             CalcItemWhereClause__c,
             ChangedFieldsOnCalcItem__c,
@@ -1535,7 +1550,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
             IsRollupStartedFromParent__c,
             OrderByFirstLast__c,
             RollupControl__c,
-            RollupOperation__c
+            RollupOperation__c,
+            RollupToUltimateParent__c
           FROM Rollup__mdt
         ];
         // do the transforms
@@ -1546,6 +1562,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
           meta.LookupFieldOnCalcItem__c = meta.LookupFieldOnCalcItem__r.QualifiedApiName;
           meta.LookupFieldOnLookupObject__c = meta.LookupFieldOnLookupObject__r.QualifiedApiName;
           meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObject__r.QualifiedApiName;
+          meta.UltimateParentLookup__c = meta.UltimateParentLookup__r.QualifiedApiName;
         }
       }
       if (rollupMetadata != null) {
@@ -1577,7 +1594,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     String operationName,
     QueryWrapper queryWrapper,
     String potentialGrandparentRelationshipFieldPath,
-    String potentialConcatDelimiter
+    String potentialConcatDelimiter,
+    RollupInvocationPoint invokePoint
   ) {
     // just how many items are we talking, here? If it's less than the query limit, we can proceed
     // otherwise, kick off a batch to fetch the calc items and then chain into the regular code path
@@ -1603,7 +1621,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     queryFields.addAll(whereEval.getQueryFields());
     String queryString = getQueryString(calcItemType, new List<String>(queryFields), 'Id', '!=', queryWrapper.getQuery());
 
-    return startFullRecalc(new List<Rollup__mdt>{ rollupInfo }, amountOfCalcItems, queryString, objIds, recordIds, calcItemType, whereEval);
+    return startFullRecalc(new List<Rollup__mdt>{ rollupInfo }, amountOfCalcItems, queryString, objIds, recordIds, calcItemType, whereEval, invokePoint);
   }
 
   private static String startFullRecalc(
@@ -1613,22 +1631,35 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     Set<String> objIds,
     Set<Id> recordIds,
     SObjectType calcItemType,
-    Evaluator eval
+    Evaluator eval,
+    RollupInvocationPoint invokePoint
   ) {
     // emptyRollup used to reference the default RollupControl__mdt.MaxQueryRows__c, as well as BatchChunkSize__c
-    Rollup emptyRollup = new Rollup(RollupInvocationPoint.FROM_LWC);
+    Rollup emptyRollup = new Rollup(invokePoint);
     Boolean shouldQueue = amountOfCalcItems != SENTINEL_COUNT_VALUE && amountOfCalcItems < emptyRollup.rollupControl.MaxQueryRows__c;
     if (shouldQueue) {
       List<SObject> calculationItems = Database.query(queryString);
-      Rollup thisRollup = getRollup(matchingMeta, calcItemType, calculationItems, new Map<Id, SObject>(calculationItems), eval, RollupInvocationPoint.FROM_LWC);
+      Rollup thisRollup = getRollup(matchingMeta, calcItemType, calculationItems, new Map<Id, SObject>(calculationItems), eval, invokePoint);
       thisRollup.isFullRecalc = true;
       return thisRollup.runCalc();
     } else {
       // batch to get calc items and then batch to rollup
       return Database.executeBatch(
-        new RollupFullBatchRecalculator(queryString, RollupInvocationPoint.FROM_LWC, matchingMeta, calcItemType, recordIds),
+        new RollupFullBatchRecalculator(queryString, invokePoint, matchingMeta, calcItemType, recordIds),
         emptyRollup.rollupControl.BatchChunkSize__c.intValue()
       );
+    }
+  }
+
+  private static void enforceValidationRules(String rollupOperation, FlowInput flowInput) {
+    if ((rollupOperation == 'FIRST' || rollupOperation == 'LAST') && String.isBlank(flowInput.orderByFirstLast)) {
+      throw new IllegalArgumentException('Order By First/Last field required for ' + rollupOperation + ' operation');
+    } else if ((flowInput.rollupToUltimateParent && String.isBlank(flowInput.ultimateParentLookup)) || (String.isNotBlank(flowInput.ultimateParentLookup) && flowInput.rollupToUltimateParent == false)) {
+      throw new IllegalArgumentException('Rollup To Ultimate Parent and Ultimate Parent Lookup must both be set for hierarchical rollups');
+    } else if (rollupOperation.contains(Op.CONCAT.name()) == false && String.isNotBlank(flowInput.concatDelimiter)) {
+      throw new IllegalArgumentException('Concat delimiter should only be supplied for CONCAT-based rollups');
+    } else if (String.isNotBlank(flowInput.fullRecalculationDefaultStringValue) && flowInput.fullRecalculationDefaultNumberValue != null) {
+      throw new IllegalArgumentException('Only one override - the default string value or number value - can be supplied for each rollup');
     }
   }
 
@@ -1657,10 +1688,10 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         optionalWhereClause = optionalWhereClause.replace(whereClause, '').trim();
       }
       // sanitize what's left of the where clause
-      while(optionalWhereClause.endsWith('AND')) {
+      while (optionalWhereClause.endsWith('AND')) {
         optionalWhereClause = optionalWhereClause.substringBeforeLast('AND').trim();
       }
-      while(optionalWhereClause.endsWith('OR')) {
+      while (optionalWhereClause.endsWith('OR')) {
         optionalWhereClause = optionalWhereClause.substringBeforeLast('OR').trim();
       }
     } catch (Exception ex) {
@@ -2220,6 +2251,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   private List<SObject> filter(List<SObject> calcItems, Evaluator eval, Rollup__mdt rollupMetadata) {
+    Set<String> alwaysFullRecalcOps = new Set<String>{ 'FIRST', 'LAST', 'AVERAGE' };
     List<SObject> applicableItems = new List<SObject>();
     if (calcItems?.isEmpty() != false) {
       return applicableItems;
@@ -2233,7 +2265,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         // have to do this EXTRA explicit check
       } else if (rollupMetadata?.IsFullRecordSet__c == true) {
         applicableItems.add(calcItem);
-      } else if (rollupMetadata?.RollupOperation__c?.contains(Rollup.Op.AVERAGE.name()) == true) {
+      } else if (alwaysFullRecalcOps.contains(rollupMetadata?.RollupOperation__c)) {
         applicableItems.add(calcItem);
       }
     }
@@ -2337,15 +2369,14 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   private Map<String, List<SObject>> getCalcItemsByLookupField(Rollup rollup, Set<String> uniqueQueryFieldNames) {
-    if (String.isNotBlank(rollup.metadata.GrandparentRelationshipFieldPath__c)) {
+    if (String.isNotBlank(rollup.metadata.GrandparentRelationshipFieldPath__c) || rollup.metadata.RollupToUltimateParent__c) {
       if (rollup.traversal == null) {
         rollup.traversal = new RollupRelationshipFieldFinder(
             rollup.rollupControl,
-            rollup.metadata.GrandparentRelationshipFieldPath__c,
+            rollup.metadata,
             uniqueQueryFieldNames,
             rollup.lookupObj,
-            rollup.oldCalcItems,
-            rollup.metadata.CalcItemWhereClause__c
+            rollup.oldCalcItems
           )
           .getParents(rollup.calcItems);
       } else if (rollup.traversal?.getIsFinished() == false) {
